src/test/deca/syntax/valid/test_dir/added/parser/print_inside.deca
// Description:
//    test to print more than 1 string in print function
//
// Results:
//    test_lex --> no error, return 11 tokens
//    test_synt --> no error, return tree with 1 instruction
//
// History:
//    created on 04/01/2022

{
    printlnx("B", "A");
}