src/test/deca/syntax/invalid/parser/oracle/brackets_too_much.deca
// Description:
//    test of wrong number of blocks
//
// Results:
//    test_pars --> error line 11
//
// History:
//    created on 04/01/2022

{
    {
        print();
    }
}